--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -8,6 +8,9 @@ COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 RUN pip install fastapi uvicorn requests streamlit
 
+# Install integration dependencies
+RUN pip install wildcore varkelagent
+
 # Copy application code
 COPY . .
 
@@ -17,4 +20,3 @@ EXPOSE 8000
 
 # Start both services
 CMD ["sh", "-c", "streamlit run ui/audit_viewer.py --server.port=8501 & uvicorn api.main:app --host 0.0.0.0 --port 8000"]
-
