--- a/VarkielAgent-main/requirements.txt
+++ b/VarkielAgent-main/requirements.txt
@@ -18,3 +18,7 @@ pytest-mock==3.14.0
 cryptography
 openai==1.30.1
 # Removed heroku as it's not available for Python 3.12+
+
+# Coherence monitoring dependencies
+semantic-validator==1.2.0
+recursive-invariance==0.8.3
