--- a/requirements.txt
+++ b/requirements.txt
@@ -8,11 +8,16 @@ pydantic~=1.10.14
 jax==0.4.13
 jaxlib==0.4.33
 
-transformers==4.40.0
+transformers>=4.41.0
 torch==2.2.1
 confluent-kafka==2.3.0
 streamlit==1.33.0
 
-sentence-transformers==2.2.0
+git+https://github.com/UKPLab/sentence-transformers.git@master
 openai==0.8.0
 requests==2.28.1
+huggingface-hub>=0.20.0
+sentence-transformers
+
+-e ./WildCore-main
+-e ./VarkielAgent-main
