Add fallback stubs and update phi2 moderation

--- a/constraints.yaml
+++ b/constraints.yaml
@@ -5,6 +5,7 @@ profiles:
     - ConstraintResetPulse
     - ConstraintProfanityFilter
     - SemanticSimilarityGuard
+    - { class: SemanticSimilarityGuard, params: { reference: "hello" } }
     - ConstraintPhi2Moderation
   regulated:
     - Safeguard001
